--- a/scss/_data.scss
+++ b/scss/_data.scss
@@ -1,27 +1,30 @@
 @use "sass:string";
-@use "./list";
+@use "sass:list" as list;      // стандартные функции работы со списками
+@use "./list" as userlist;     // твой локальный файл list.scss
 
 @function _nospace($string, $sep: " ") {
-    $words: string.split(string.to-lower-case($string), $sep);
-    $nospace: "";
-    @each $word in $words {
-        @if $word != "&" {
-            $nospace: $nospace + $word;
-        }
+  $words: string.split(string.to-lower-case($string), $sep);
+  $nospace: "";
+
+  @each $word in $words {
+    @if $word != "&" {
+      $nospace: $nospace + $word;
     }
-    @return $nospace;
+  }
+
+  @return $nospace;
 }
 
 $pairs: ();
 
-@each $id in list.$user {
-    $pairs: append($pairs, ($id, _nospace($id)));
+@each $id in userlist.$user {
+  $pairs: list.append($pairs, ($id, _nospace($id)));
 }
 
-@each $id in list.$server {
-    $pairs: append($pairs, (string.to-upper-case($id), _nospace($id, "_")));
+@each $id in userlist.$server {
+  $pairs: list.append($pairs, (string.to-upper-case($id), _nospace($id, "_")));
 }
 
-@each $id in list.$channel {
-    $pairs: append($pairs, (string.to-upper-case($id), _nospace($id, "_")));
+@each $id in userlist.$channel {
+  $pairs: list.append($pairs, (string.to-upper-case($id), _nospace($id, "_")));
 }
