Update initial-value URL for settings icons to use raw GitHub content

--- a/SettingsIcons.theme.css
+++ b/SettingsIcons.theme.css
@@ -9,7 +9,7 @@
  * @source https://github.com/MiniDiscordThemes/SettingsIcons
 */
 
-@import url("https://minidiscordthemes.github.io/SettingsIcons/main.min.css");
+@import url("https://raw.githubusercontent.com/vitaluska123/SettingsIcons/refs/heads/main/main.min.css");
 
 /* See https://github.com/MiniDiscordThemes/SettingsIcons#customisation for customisation settings. */
 :root {
