deploy: f4e090c9bc580e264be11af76573b5ca2dc2d255

--- a/scss/_property.scss
+++ b/scss/_property.scss
@@ -3,6 +3,7 @@
     @property --si-#{$setting} {
         syntax: "<url>";
         inherits: true;
-        initial-value: url(https://minidiscordthemes.github.io/SettingsIcons/svg/#{$setting}.svg);
+        initial-value: url(https://raw.githubusercontent.com/vitaluska123/SettingsIcons/refs/heads/main/svg/#{$setting}.svg);
     }
+    
 }
